--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         // Defaults
         const defaultAccountsList = ['國泰', '郵局', 'BANK', '合庫', '玉山', '聯邦'];
         const defaultFixedList = [
-            {name: '餐費', note: '月預算', amount: 0, id: 1},
+            {name: '餐費', note: '國泰', amount: 0, id: 1},
             {name: '生活用品', note: '合庫', amount: 0, id: 2},
             {name: '電話費', note: '合庫', amount: 0, id: 3},
             {name: '壽險', note: '郵局', amount: 0, id: 4},
@@ -666,17 +666,45 @@
                 amtInput.disabled = false; 
                 btn.textContent = '💰 記錄';
                 
+                // Determine default account and budget info
+                let targetAccount = '';
+                let budgetInfo = '';
+
+                // Check for Fixed Expense Link
                 const fixedItem = fixedExpenses.find(f => f.name === v);
                 if (fixedItem) {
+                    targetAccount = fixedItem.note; // e.g. '合庫'
                     const monthStart = currentDate.substring(0, 7);
                     const monthLogs = dailyLogs.filter(l => l.dateStr.startsWith(monthStart));
                     const spent = monthLogs.filter(l => l.category === v).reduce((a, b) => a + (b.amount || 0), 0);
                     const remaining = fixedItem.amount - spent;
-                    const linkedAccount = fixedItem.note || '未指定'; 
-                    cardSel.innerHTML = `<option value="${linkedAccount}">✔ ${linkedAccount} (預算剩: $${remaining})</option>`;
-                } else {
-                    cardSel.innerHTML = accounts.map(a=>`<option value="${a.name}">${a.name} ($${a.balance})</option>`).join('') + '<option value="custom">➕ 自訂...</option>';
+                    budgetInfo = ` (預算剩: $${remaining})`;
                 }
+
+                // Check for Specific Defaults (Overrides fixed if needed, though usually distinct)
+                if (v === '餐費') {
+                    targetAccount = '國泰';
+                }
+
+                // Generate Options (Show ALL accounts, but select the target)
+                const optionsHtml = accounts.map(a => {
+                    let label = `${a.name} ($${a.balance})`;
+                    let isSelected = false;
+
+                    // If this account is the target default
+                    if (a.name === targetAccount) {
+                        isSelected = true;
+                    }
+
+                    // If this account matches the fixed expense note, add the visual cue & budget info
+                    if (fixedItem && a.name === fixedItem.note) {
+                        label = `✔ ${a.name}${budgetInfo}`;
+                    }
+
+                    return `<option value="${a.name}" ${isSelected ? 'selected' : ''}>${label}</option>`;
+                }).join('') + '<option value="custom">➕ 自訂...</option>';
+
+                cardSel.innerHTML = optionsHtml;
             }
         };
 
