--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         // Defaults
         const defaultAccountsList = ['國泰', '郵局', 'BANK', '合庫', '玉山', '聯邦'];
         const defaultFixedList = [
-            {name: '餐費', note: '國泰', amount: 8000, id: 1}, // 預設綁定國泰
+            {name: '餐費', note: '國泰', amount: 8000, id: 1}, 
             {name: '生活用品', note: '合庫', amount: 1000, id: 2},
             {name: '電話費', note: '合庫', amount: 500, id: 3},
             {name: '壽險', note: '郵局', amount: 3000, id: 4},
